# risset

./: .cirrus.ci  .cirrus.yml  .gitignore  DESIGN.md  README.md  cspm  publish  pyproject.toml  risset  risset.py  setup.py
.github/workflows/: test.yml
scripts/: install-windows.ps1  install.sh
test/: README.md  lfnoise.csd
